# collabkit

./: .gitignore  README.md
examples/chat-app/backend/: main.py
examples/chat-app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/chat-app/frontend/src/: App.tsx  styles.css
examples/combined-demo/backend/: main.py
examples/combined-demo/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/combined-demo/frontend/src/: App.tsx  main.tsx  styles.css
examples/text-editor/backend/: main.py
examples/text-editor/frontend/: index.html  package-lock.json  package.json  vite.config.ts
examples/text-editor/frontend/src/: App.tsx  main.tsx  styles.css
examples/todo-app/backend/: .env.example  main.py  requirements.txt
examples/todo-app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
examples/todo-app/frontend/src/: App.tsx  main.tsx  styles.css
js/: package.json  tsconfig.json
js/src/: client.ts  index.ts  offline.ts  protocol.ts  screenshare.ts
js/src/crdt/: index.ts  map.ts  register.ts  types.ts
js/src/react/: context.ts  hooks.ts  index.ts  provider.tsx
python/: pyproject.toml
python/collabkit/: __init__.py  presence.py  protocol.py  room.py  server.py
python/collabkit/auth/: __init__.py  base.py  jwt.py
python/collabkit/crdt/: __init__.py  base.py  counter.py  map.py  register.py  set.py
python/collabkit/permissions/: __init__.py  field_level.py  rbac.py
python/collabkit/storage/: __init__.py  base.py  postgres.py
